@@ -15,6 +15,8 @@ autokey (0.54.4-0~jaunty) jaunty; urgency=low
    Improve logging - log to file if run without -v
    Add -c | --configure option to forcibly show the configure dialog on startup
    Fix annoying bug where right-click of treeview doesn't always pick up the right node
+   Implement proper handling of Unicode/UTF-8 - all internal strings are now unicode instances
+   Implement yet another (rather hacky) fix for Alt-Gr issues. 
     
  -- Chris Dekter <cdekter@gmail.com>  Wed, 8 Jul 2009 20:38:05 +1000
 
